# hdx-scraper-venezuela-3w

./: README.md  hatch.toml  pyproject.toml  requirements-test.txt  requirements.txt  ruff.toml  run.py
.config/: ruff.toml
.github/workflows/: publish.yaml  run-python-script.yaml
src/hdx/scraper/venezuela_3w/: __main__.py  venezuela_3w.py
src/hdx/scraper/venezuela_3w/config/: hdx_dataset_static.yaml  hdx_resource_view_static.yaml  project_configuration.yaml
tests/: conftest.py  test_venezuela_3w.py
tests/fixtures/: VEN_5W_2024.csv
tests/fixtures/input/: dataset-venezuela-who-does-what-and-where-3w.json  v2-dataset-api-dataset-87-year-2024-page-2.json  v2-dataset-api-dataset-87-year-2024-page-3.json  v2-dataset-api-dataset-87-year-2024.json
